<resources>
    <string name="app_name">SafetyApp</string>
    <string name="welcome_head_profile">\"Welcome,%1$s! \"</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="register">Register</string>
    <string name="click_here_to_reset">Click here to RESET</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="image">Image</string>
    <string name="email">Email*</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password*</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_password">Enter password</string>
    <string name="update_email_u">Update Email</string>
    <string name="upload_pic_u">Upload Image</string>
    <string name="user_display_picture">User Picture</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="registered_user_since">Register User</string>
    <string name="i_agree_with_the_terms_of_service_and_privacy_policy">I agree with the Terms of Service and Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="instructions">Instructions</string>
    <string name="Authenticated">You are Authenticated.you can change password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_description">dsfasdfasdfsdfsdfasdfsdf</string>
    <string-array name="interval_options">
        <item>00:00-03:00 </item>
        <item>03:00-06:00 </item>
        <item>06:00-09:00 </item>
        <item>09:00-12:00</item>

    </string-array>

</resources>