<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/purple_700">

                <TextView
                    android:id="@+id/textView_login_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:text="@string/welcome_back"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/textView_login_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/please_log_in_to_continue"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/RL_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/textView_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:padding="6dp"
                        android:layout_toRightOf="@id/imageViewEmail"
                        android:paddingRight="10dp"
                        android:text="@string/email" />


                    <View
                        android:id="@+id/divider_email"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_login_email"
                        android:layout_toRightOf="@id/imageViewEmail"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:padding="6dp"

                        android:layout_below="@id/divider_email"
                        android:layout_toRightOf="@id/imageViewEmail"

                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:textSize="16sp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_email"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewPwd"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_pwd_bw" />

                    <TextView
                        android:id="@+id/textView_login_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:padding="6dp"
                        android:text="@string/password" />

                    <View
                        android:id="@+id/divider_pwd"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_login_pwd"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_login_pwd"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_login_pwd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="6dp"
                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/imageView_show_hide_pwd"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_below="@id/textView_login_pwd"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/image" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_pwd"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="43dp"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="34dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/do_not_have_an_account"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView_register_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_login"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/forgot_your_password"
                        android:textAlignment="center" />


                    <TextView
                        android:id="@+id/textView_forgot_password_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/click_here_to_reset"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>